--- a/src/style.css
+++ b/src/style.css
@@ -168,6 +168,7 @@ p {
   --x-height-multiplier: 0.35;
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
   padding: var(--spacing-0);
+  text-align: justify;
 }
 
 ul,
@@ -203,7 +204,7 @@ blockquote {
   color: var(--color-text-light);
   /* margin-left: calc(-1 * var(--spacing-6)); */
   margin-left: 0;
-  margin-right: var(--spacing-8);
+  margin-right: var(--spacing-5);
   padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
   border-left: var(--spacing-1) solid var(--color-primary);
   font-size: var(--fontSize-2);
@@ -247,7 +248,7 @@ a:focus {
 .global-wrapper {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
+  padding: var(--spacing-20) var(--spacing-5);
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
@@ -256,12 +257,13 @@ a:focus {
 
 .global-header {
   margin-bottom: var(--spacing-12);
+  text-align: right;
 }
 
 .main-heading {
-  font-size: var(--fontSize-7);
-  margin: 0;
+  font-size: var(--fontSize-3);
   font-family: var(--font-heading);
+  margin: 0;
 }
 
 /* Posts on the Home page */
@@ -298,13 +300,19 @@ a:focus {
   margin-bottom: var(--spacing-4);
 }
 
+
+/* Posts */
+
 .header-link-home {
   font-weight: var(--fontWeight-bold);
   font-family: var(--font-heading);
-  text-decoration: none;
   font-size: var(--fontSize-2);
+  text-decoration: none;
+  text-align: right;
 }
 
+/* I don't use the bio */
+/*
 .bio {
   display: flex;
   margin-bottom: var(--spacing-16);
@@ -320,6 +328,7 @@ a:focus {
   min-width: 50px;
   border-radius: 100%;
 }
+  */
 
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
@@ -334,8 +343,8 @@ a:focus {
   margin: var(--spacing-0);
 }
 
-.gatsby-highlight {
-  margin-bottom: var(--spacing-8);
+footer {
+  text-align: center;
 }
 
 /* Media queries */
