--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,8 @@
   --maxWidth-2xl: 40rem;
   --maxWidth-3xl: 46rem;
   --maxWidth-4xl: 52rem;
+  --maxWidth-5xl: 60rem;
   --maxWidth-full: "100%";
-  --maxWidth-wrapper: var(--maxWidth-4xl);
   --spacing-px: "1px";
   --spacing-0: 0;
   --spacing-1: 0.25rem;
@@ -62,6 +62,9 @@
   --color-heading: #1a202c;
   --color-heading-black: black;
   --color-accent: #536493;
+  --wrapper-maxWidth: var(--maxWidth-5xl);
+  --wrapper-padding: var(--spacing-20);
+  --post-gap: var(--spacing-5);
 }
 
 
@@ -246,9 +249,9 @@ a:focus {
 /* Custom classes */
 
 .global-wrapper {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-20) var(--spacing-5);
+  margin: 0 auto;
+  max-width: var(--wrapper-maxWidth);
+  padding: var(--wrapper-padding);
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
@@ -266,27 +269,28 @@ a:focus {
   margin: 0;
 }
 
-/* Posts on the Home page */
+/* Home page */
 
 .post-list-container {
-  /* make it flexbox like a portfolio*/
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: var(--post-gap);
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-16) var(--spacing-0);
 }
 
 .post-list-item {
-  background-color: gray;
-  width: 300px;
-  height: 300px;
+  background-color: #EEE;
+  width: calc((var(--wrapper-maxWidth) - var(--wrapper-padding)*2 - var(--post-gap)*2)/3);
+  height: calc((var(--wrapper-maxWidth) - var(--wrapper-padding)*2 - var(--post-gap)*2)/3);
 
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+  border-radius: 0.5rem;
+  padding: var(--spacing-6);
 }
 
 .post-list-item p {
   margin-bottom: var(--spacing-0);
+  font-size: 0.6rem;
 }
 
 .post-list-item h2 {
@@ -301,7 +305,7 @@ a:focus {
 }
 
 
-/* Posts */
+/* each Post page */
 
 .header-link-home {
   font-weight: var(--fontWeight-bold);
@@ -353,10 +357,5 @@ footer {
   blockquote {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
     margin-left: var(--spacing-0);
-  }
-
-  ul,
-  ol {
-    /* list-style-position: inside; */
   }
 }
