--- a/src/style.css
+++ b/src/style.css
@@ -348,6 +348,10 @@ footer {
   margin-bottom: var(--spacing-8);
 }
 
+.gatsby-resp-image-wrapper {
+  margin: 0.5rem 0;
+}
+
 /* Media queries */
 
 @media (max-width: 42rem) {
