--- a/src/style.css
+++ b/src/style.css
@@ -325,6 +325,10 @@ a:focus {
 }
 */
 
+.post header {
+  margin-bottom: var(--spacing-10);
+}
+
 .post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
@@ -332,6 +336,10 @@ a:focus {
 .post header p {
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
+}
+
+.post p {
+  margin: 1.1rem 0;
 }
 
 .post-nav ul {
@@ -349,7 +357,7 @@ footer {
 }
 
 .gatsby-resp-image-wrapper {
-  margin: 0.5rem 0;
+  margin: 0.3rem 0;
 }
 
 /* Media queries */
